Added to Experience/Projects and edited certain sentences

--- a/projects.html
+++ b/projects.html
@@ -74,6 +74,20 @@ title: Home
           Projects
         </h1>
 
+        <h3>Bassline Music Player</h3>
+
+        <!-- Bassline Music Player -->
+        <p>
+          <strong><i>HACK-MT 2026 Project</strong></i>
+          <br>
+          <i>January 2026</i>
+        </p>
+
+        <ul>
+          <li>Utilized Dart and the Flutter framework to create the UI of a local file music player</li>
+          <li>Completed over the span of 36 hours with a team of 6 members</li>
+        </ul>
+        
         <h3>Data-Driven Crime Forecasting in Memphis: Leveraging AI for Predictive Analysis</h3>
 
         <!-- Thesis -->
@@ -84,9 +98,9 @@ title: Home
         </p>
 
         <ul>
-          <li>Researched how artificial intelligence can be utilized in the criminal justice field.</li>
-          <li>Utilized Python and its libraries to create a Linear Regression AI model that predicts crime in Memphis, Tennessee per zip code.</li>
-          <li>Defended November 2025 and finalized December 2025.</li>
+          <li>Researched how artificial intelligence can be utilized in the criminal justice field</li>
+          <li>Utilized Python and its libraries to create a Linear Regression AI model that predicts crime in Memphis, Tennessee per zip code</li>
+          <li>Defended November 2025 and finalized December 2025</li>
         </ul>
 
         <!-- Untitled Potato Game -->
@@ -99,8 +113,8 @@ title: Home
         </p>
 
         <ul>
-          <li>Completed within four weeks alongside two other students.</li>
-          <li>Utilizes the Python libraries Pygame and Pygame Widgets.</li>
+          <li>Utilizes the Python libraries Pygame and Pygame Widgets</li>
+          <li>Completed within four weeks alongside 2 other students</li>
         </ul>
 
         <h3>Attendance Calculator</h3>
@@ -112,8 +126,8 @@ title: Home
         </p>
 
         <ul>
-          <li>This calculator allowed for the professor to determine each student's final grade based on their attendance.</li>
-          <li>Collaborated with another student in Python to receive honors credit in a non-honors course.</li>
+          <li>Calculator that allowed the professor to determine each student's final grade based on attendance</li>
+          <li>Collaborated with another student in Python to receive honors credit in a non-honors course</li>
         </ul>
       </div>
 
